# osrs

./: requirements.txt  results.csv  setup.cfg  setup.py
src/airtable/: driver.py  settings.py  type_hints.py  update_airtable.py  utility.py  wiki_driver.py
src/bots/: driver.py  image.py  leagues_runecrafting.py  type_hints.py
src/other/: probability_calc.py
