
[metadata]
description-file = README.md


[tool:pytest]
python_files = *.py


[flake8]
; https://flake8.pycqa.org/en/latest/user/options.html
; format flake8 output options
count = True
show-source = True
statistics = True

; code settings
max-line-length = 80

; flake8-annotations - https://pypi.org/project/flake8-annotations/
extend-ignore = ANN101, ANN204

; flake8-quotes - https://pypi.org/project/flake8-quotes/
multiline-quotes = '
docstring-quotes = '